Product list search button on tablet/mobile fix (DT-1072)

--- a/css/ecommerce.less
+++ b/css/ecommerce.less
@@ -198,7 +198,7 @@
                 transform: translate(0,-2px);
 
             @media @tablet {
-                transform: translate(0,-9px);
+                transform: translate(0,0);
                 display: block;
             }
 
